--- a/gui/src/tools/ASNTool.ui
+++ b/gui/src/tools/ASNTool.ui
@@ -1,42 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>IpChecker</class>
- <widget class="QDialog" name="IpChecker">
+ <class>ASNTool</class>
+ <widget class="QDialog" name="ASNTool">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>639</width>
-    <height>510</height>
+    <height>509</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>IP Address Checker</string>
+   <string>ASN Tool</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QComboBox" name="comboBoxEngine">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>100</width>
          <height>0</height>
         </size>
        </property>
        <item>
         <property name="text">
          <string>All</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>IpInfo</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>IpApi</string>
         </property>
        </item>
       </widget>
@@ -52,12 +42,6 @@
          <height>23</height>
         </size>
        </property>
-       <property name="sizeIncrement">
-        <size>
-         <width>0</width>
-         <height>0</height>
-        </size>
-       </property>
        <property name="text">
         <string>Analyze</string>
        </property>
@@ -71,12 +55,6 @@
          <height>23</height>
         </size>
        </property>
-       <property name="sizeIncrement">
-        <size>
-         <width>0</width>
-         <height>0</height>
-        </size>
-       </property>
        <property name="text">
         <string>Stop</string>
        </property>
@@ -87,38 +65,24 @@
    <item>
     <widget class="QFrame" name="frame">
      <property name="frameShape">
-      <enum>QFrame::Box</enum>
+      <enum>QFrame::StyledPanel</enum>
      </property>
      <property name="frameShadow">
-      <enum>QFrame::Sunken</enum>
+      <enum>QFrame::Raised</enum>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <property name="leftMargin">
-       <number>2</number>
-      </property>
-      <property name="rightMargin">
-       <number>2</number>
-      </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>*Data Type</string>
+         <string>*Scan Config</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QComboBox" name="comboBox_2">
-        <property name="minimumSize">
-         <size>
-          <width>110</width>
-          <height>0</height>
-         </size>
+       <widget class="QToolButton" name="buttonConfig">
+        <property name="text">
+         <string>Config...</string>
         </property>
-        <item>
-         <property name="text">
-          <string>All</string>
-         </property>
-        </item>
        </widget>
       </item>
       <item>
@@ -128,7 +92,7 @@
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>396</width>
+          <width>40</width>
           <height>20</height>
          </size>
         </property>
@@ -142,9 +106,9 @@
      <property name="currentIndex">
       <number>0</number>
      </property>
-     <widget class="QWidget" name="tabInfo" native="true">
+     <widget class="QWidget" name="tabInfo">
       <attribute name="title">
-       <string>Ip Info</string>
+       <string>Info</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout">
        <property name="leftMargin">
@@ -157,7 +121,7 @@
         <number>1</number>
        </property>
        <property name="bottomMargin">
-        <number>0</number>
+        <number>1</number>
        </property>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -182,7 +146,7 @@
           </spacer>
          </item>
          <item>
-          <widget class="QToolButton" name="toolButton">
+          <widget class="QToolButton" name="buttonAction">
            <property name="minimumSize">
             <size>
              <width>65</width>
@@ -224,7 +188,7 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
-          <widget class="QComboBox" name="comboBox_3">
+          <widget class="QComboBox" name="comboBoxFilter">
            <property name="minimumSize">
             <size>
              <width>100</width>
@@ -250,25 +214,30 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="tabGraph">
+      <attribute name="title">
+       <string>Graph</string>
+      </attribute>
+     </widget>
      <widget class="QWidget" name="tabLogs">
       <attribute name="title">
        <string>Logs</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_3">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
        <property name="leftMargin">
-        <number>2</number>
+        <number>1</number>
        </property>
        <property name="topMargin">
         <number>6</number>
        </property>
        <property name="rightMargin">
-        <number>2</number>
+        <number>1</number>
        </property>
        <property name="bottomMargin">
-        <number>0</number>
+        <number>1</number>
        </property>
        <item>
-        <widget class="QPlainTextEdit" name="plainTextEditLogs"/>
+        <widget class="QPlainTextEdit" name="plainTextEdit"/>
        </item>
       </layout>
      </widget>
