--- a/gui/src/tools/MXTool.ui
+++ b/gui/src/tools/MXTool.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>NSChecker</class>
- <widget class="QDialog" name="NSChecker">
+ <class>MXTool</class>
+ <widget class="QDialog" name="MXTool">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>NS Record Checker</string>
+   <string>MX Record Tool</string>
   </property>
  </widget>
  <resources/>
