--- a/gui/src/engines/osint/Osint.ui
+++ b/gui/src/engines/osint/Osint.ui
@@ -873,7 +873,7 @@
                   <x>0</x>
                   <y>0</y>
                   <width>175</width>
-                  <height>1002</height>
+                  <height>1025</height>
                  </rect>
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_12">
@@ -1187,6 +1187,13 @@
                   <widget class="QCheckBox" name="moduleCommonCrawl">
                    <property name="text">
                     <string>CommonCrawl</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="moduleUKWebArchive">
+                   <property name="text">
+                    <string>UKWebArchive</string>
                    </property>
                   </widget>
                  </item>
